--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <a class="nav-link" href="#destination">Layanan</a>
               </li>
               <li class="nav-item mx-4">
-                <a class="nav-link" href="#galery">Galry</a>
+                <a class="nav-link" href="#galery">Galery</a>
               </li>
               <li class="nav-item mx-4">
                 <a class="nav-link" href="#contack">Contact</a>
@@ -61,15 +61,15 @@
               <div class="sosmed mt-3">
                 <div class="icon facebook" data-aos="fade-up" data-aos-duration="2000" >
                   <div class="tooltip">Facebook</div>
-                  <span><i class="fab fa-facebook"></i></span>
+                  <span><a href="http://" style="text-decoration: none; color: white;"><i class="fab fa-facebook"></i></a></span>
                 </div>
                 <div class="icon twiter"  data-aos="fade-up" data-aos-duration="2000" data-aos-delay="200">
                   <div class="tooltip">Twiter</div>
-                  <span><i class="fab fa-twitter"></i></span>
+                  <span><a href="http://" style="text-decoration: none; color: white;"><i class="fab fa-twitter"></i></a></span>
                 </div>
                 <div class="icon instagram"  data-aos="fade-up" data-aos-duration="2000" data-aos-delay="300">
                   <div class="tooltip">Instagram</div>
-                  <span><i class="fab fa-instagram"></i></span>
+                  <span><a href="http://" style="text-decoration: none; color: white;"><i class="fab fa-instagram"></i></a></span>
                 </div>
               </div>
             </div>
@@ -88,7 +88,7 @@
               <div class="underline mx-auto mb-5" ></div>
             </div>
   
-            <div class="col-md-4">
+            <div class="col-lg-4">
               <div class="card" data-aos="fade-down" data-aos-duration="1500">
                 <img src="/Assets/img/yogya.jpg" alt="" class="img">
                 <div class="card-body">
@@ -112,7 +112,7 @@
               </div>
             </div>
   
-            <div class="col-md-4">
+            <div class="col-lg-4">
               <div class="card" data-aos="fade-down" data-aos-delay="300" data-aos-duration="1500">
                 <img src="/Assets/img/wisata-indonesia-5-Manado-Express.jpg" alt="" class="img">
                 <div class="card-body">
@@ -136,7 +136,7 @@
               </div>
             </div>
   
-            <div class="col-md-4">
+            <div class="col-lg-4">
               <div class="card" data-aos="fade-down" data-aos-delay="400" data-aos-duration="1500">
                 <img src="/Assets/img/danau toba.jpg" alt="" class="img">
                 <div class="card-body">
@@ -177,9 +177,7 @@
               <div class="carousel-item active" style="background-image: linear-gradient(0deg,rgba(100, 92, 92, 0.288), rgba(49, 44, 44, 0.473)), url(/Assets/img/Bali.jpg) ; background-size: cover; background-position: center; background-repeat: no-repeat;">
                 <div class="content">
                   <div class="card">
-                    <div class="aos">
                       <img src="/Assets/img/bali in.jpg" alt="" data-aos="fade-left" data-aos-duration="2000">
-                    </div>
                   </div>
                   <div class="isi" style="margin-left: 5%;" data-aos="zoom-out" data-aos-duration="600">
                     <h2>Wisata Pulau Bali</h2>
@@ -188,7 +186,7 @@
                         Dari sekian banyak tempat wisata menarik, yang paling populer di telinga wisatawan tentu saja Pantai Kuta, Pantai Legian, Pantai Seminyak, 
                         Pura Tanah Lot dan suasana pedesaan Ubud.
                     </p>
-                    <button class="btn btn-primary">Selengkapnya</button>
+                    <button class="btn btn-primary" onclick="galery()" >Selengkapnya</button>
                   </div>
                 </div>
               </div>
@@ -199,7 +197,7 @@
                     <p>
                       Raja Ampat menjadi primadona baru di dunia pariwisata Indonesia yang menjadi tempat wisata terindah di indonesia, Raja Ampat sendiri merupakan kumpulan dari pulau-pulau di ujung Papua. Perairan di tempat wisata ini dikenal sebagai salah satu lokasi menyelam dan snorkeling terbaik di dunia.
                     </p>
-                    <button class="btn btn-primary">Selengkapnya</button>
+                    <button class="btn btn-primary" onclick="galery()" >Selengkapnya</button>
                   </div>
                   <div class="card">
                     <img src="/Assets/img/Kepulauan-Raja-Ampat-Papua.jpg" alt="">
@@ -217,7 +215,7 @@
                       Kota Yogyakarta merukan kota yang menawarkan keindahan alamnya yang indah, Yogyakarta merupakan spot destinasi wisata ysng paling banyak di tuju oleh para touris dan orang lokal.
                       di antaranya wiata candi, pantai, dan wisata alam, yang paling populer adalah wisata candi yang memiliki sejarah didalammnya.
                     </p>
-                    <button class="btn btn-primary">Selengkapnya</button>
+                    <button class="btn btn-primary" onclick="galery()" >Selengkapnya</button>
                   </div>
                 </div>
               </div>
@@ -245,68 +243,68 @@
             </div>
   
             <div class="row">
-              <div class="col-sm-4 ">
+              <div class="col-lg-4 ">
                 <div class="card" data-aos="zoom-in" data-aos-duration="1000">
                   <img src="/Assets/img/bromo.jpg" alt="">
                   <div class="info p-4">
                     <h3>Wisata Bromo</h3>
                     <p>Gunung Bromo adalah salah satu gunung yang indah, Gunung Bromo Terletak di Jawa Timur.</p>
-                    <a href="/bromo.html" class="btn btn-primary">Selengkapnya...</a>
+                    <button  class="btn btn-primary" onclick="galery()"><a href="/bromo.html"></a>Selengkapnya...</button>
                   </div>
                 </div>
               </div>
   
-              <div class="col-sm-4">
+              <div class="col-lg-4">
                 <div class="card" data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="200">
                   <img src="/Assets/img/Bali.jpg" alt="">
                   <div class="info p-4">
                     <h3>Wisata Bali</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque veniam quas non blanditiis alias quasi.</p>
-                    <a href="" class="btn btn-primary">Selengkapnya...</a>
+                    <p>Bali menawarkan berbagai wisata Pantai Kuta, Pantai Legian, Pura Tanah Lot dan suasana pedesaan Ubud.</p>
+                    <button  class="btn btn-primary" onclick="galery()"><a href="/bromo.html"></a>Selengkapnya...</button>
                   </div>
                 </div>
               </div>
   
-              <div class="col-sm-4">
+              <div class="col-lg-4">
                 <div class="card" data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="300">
                   <img src="/Assets/img/Lombok.jpg" alt="">
                   <div class="info p-4">
                     <h3>Wisata Lombok</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque veniam quas non blanditiis alias quasi.</p>
-                    <a href="" class="btn btn-primary">Selengkapnya...</a>
+                    <p>Lombok, terletak di timur Bali, adalah destinasi yang memesona dengan daya tarik alam dan budaya yang khas</p>
+                    <button  class="btn btn-primary" onclick="galery()"><a href="/bromo.html"></a>Selengkapnya...</button>
                   </div>
                 </div>
               </div>
   
-              <div class="col-sm-4">
+              <div class="col-lg-4">
                 <div class="card" data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="400">
                   <img src="/Assets/img/yogya.jpg" alt="">
                   <div class="info p-4">
                     <h3>Wisata Yogyakarta</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque veniam quas non blanditiis alias quasi.</p>
-                    <a href="" class="btn btn-primary">Selengkapnya...</a>
+                    <p>Yogyakarta memiliki banyak tempat wisata di antaranya wiata candi, pantai, dan wisata alam dan wisata candi </p>
+                    <button  class="btn btn-primary" onclick="galery()"><a href="/bromo.html"></a>Selengkapnya...</button>
                   </div>
                 </div>
               </div>
   
-              <div class="col-sm-4">
+              <div class="col-lg-4">
                 <div class="card" data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="500">
                   <img src="/Assets/img/bunaken.jpg" alt="">
                   <div class="info p-4">
                     <h3>Wisata Bunaken</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque veniam quas non blanditiis alias quasi.</p>
-                    <a href="" class="btn btn-primary">Selengkapnya...</a>
+                    <p>Taman Laut Bunaken yang bertempat di Provinsi Sulawesi Utara.yang merupakan kawasan konservasi terumbu karang dan biota laut lain dengan luas</p>
+                    <button  class="btn btn-primary" onclick="galery()"><a href="/bromo.html"></a>Selengkapnya...</button>
                   </div>
                 </div>
               </div>
   
-              <div class="col-sm-4">
+              <div class="col-lg-4">
                 <div class="card" data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="600">
                   <img src="/Assets/img/Kepulauan-Seribu.jpg" alt="">
                   <div class="info p-4">
                     <h3>Wisata Kepuilauan Seribu</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque veniam quas non blanditiis alias quasi.</p>
-                    <a href="" class="btn btn-primary">Selengkapnya...</a>
+                    <p> Kepulauan seribu juga memiliki banyak pulau di antaranya adalah Pulau Kahyangan, Pulau Pabelokan, dan Pulau Bidadari</p>
+                    <button  class="btn btn-primary" onclick="galery()"><a href="/bromo.html"></a>Selengkapnya...</button>
                   </div>
                 </div>
               </div>
