--- a/index.html
+++ b/index.html
@@ -90,21 +90,21 @@
   
             <div class="col-lg-4">
               <div class="card" data-aos="fade-down" data-aos-duration="1500">
-                <img src="/Assets/img/yogya.jpg" alt="" class="img">
+                <img src="./Assets/img/yogya.jpg" alt="" class="img">
                 <div class="card-body">
                   <h4>Paket Wisata Yogyakarta</h4>
                   <p><s>RP. 3.500.000</s> <span>Rp. 3.000.000</span></p>
                   <div class="card-fasilitas d-flex justify-content-between px-4">
                     <span>
-                      <img src="/Assets/img/Icon Kamar Tidur.png" alt="">
+                      <img src="./Assets/img/Icon Kamar Tidur.png" alt="">
                       <p>Penginapan</p>
                     </span>
                     <span>
-                      <img src="/Assets/img/Icon Luas Tanah.png" alt="">
+                      <img src="./Assets/img/Icon Luas Tanah.png" alt="">
                       <p>Akomodasi</p>
                     </span>
                     <span>
-                      <img src="/Assets/img/Icon Kamar Mandi.png" alt="">
+                      <img src="./Assets/img/Icon Kamar Mandi.png" alt="">
                       <p>Transportasi</p>
                     </span>
                   </div>
@@ -114,21 +114,21 @@
   
             <div class="col-lg-4">
               <div class="card" data-aos="fade-down" data-aos-delay="300" data-aos-duration="1500">
-                <img src="/Assets/img/wisata-indonesia-5-Manado-Express.jpg" alt="" class="img">
+                <img src="./Assets/img/wisata-indonesia-5-Manado-Express.jpg" alt="" class="img">
                 <div class="card-body">
                   <h4>Paket Wisata Raja Ampat</h4>
                   <p><s>RP. 5.000.000</s> <span>Rp. 4.500.000</span></p>
                   <div class="card-fasilitas d-flex justify-content-between px-4">
                     <span>
-                      <img src="/Assets/img/Icon Kamar Tidur.png" alt="">
+                      <img src="./Assets/img/Icon Kamar Tidur.png" alt="">
                       <p>Penginapan</p>
                     </span>
                     <span>
-                      <img src="/Assets/img/Icon Luas Tanah.png" alt="">
+                      <img src="./Assets/img/Icon Luas Tanah.png" alt="">
                       <p>Akomodasi</p>
                     </span>
                     <span>
-                      <img src="/Assets/img/Icon Kamar Mandi.png" alt="">
+                      <img src="./Assets/img/Icon Kamar Mandi.png" alt="">
                       <p>Transportasi</p>
                     </span>
                   </div>
@@ -138,21 +138,21 @@
   
             <div class="col-lg-4">
               <div class="card" data-aos="fade-down" data-aos-delay="400" data-aos-duration="1500">
-                <img src="/Assets/img/danau toba.jpg" alt="" class="img">
+                <img src="./Assets/img/danau toba.jpg" alt="" class="img">
                 <div class="card-body">
                   <h4>Paket Wisata Danau Toba</h4>
                   <p><s>RP. 3.500.000</s> <span>Rp. 3.000.000</span></p>
                   <div class="card-fasilitas d-flex justify-content-between px-4">
                     <span>
-                      <img src="/Assets/img/Icon Kamar Tidur.png" alt="">
+                      <img src="./Assets/img/Icon Kamar Tidur.png" alt="">
                       <p>Penginapan</p>
                     </span>
                     <span>
-                      <img src="/Assets/img/Icon Luas Tanah.png" alt="">
+                      <img src="./Assets/img/Icon Luas Tanah.png" alt="">
                       <p>Akomodasi</p>
                     </span>
                     <span>
-                      <img src="/Assets/img/Icon Kamar Mandi.png" alt="">
+                      <img src="./Assets/img/Icon Kamar Mandi.png" alt="">
                       <p>Transportasi</p>
                     </span>
                   </div>
@@ -174,10 +174,10 @@
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
             </div>
             <div class="carousel-inner">
-              <div class="carousel-item active" style="background-image: linear-gradient(0deg,rgba(100, 92, 92, 0.288), rgba(49, 44, 44, 0.473)), url(/Assets/img/Bali.jpg) ; background-size: cover; background-position: center; background-repeat: no-repeat;">
+              <div class="carousel-item active" style="background-image: linear-gradient(0deg,rgba(100, 92, 92, 0.288), rgba(49, 44, 44, 0.473)), url(./Assets/img/Bali.jpg) ; background-size: cover; background-position: center; background-repeat: no-repeat;">
                 <div class="content">
                   <div class="card">
-                      <img src="/Assets/img/bali in.jpg" alt="" data-aos="fade-left" data-aos-duration="2000">
+                      <img src="./Assets/img/bali in.jpg" alt="" data-aos="fade-left" data-aos-duration="2000">
                   </div>
                   <div class="isi" style="margin-left: 5%;" data-aos="zoom-out" data-aos-duration="600">
                     <h2>Wisata Pulau Bali</h2>
@@ -190,7 +190,7 @@
                   </div>
                 </div>
               </div>
-              <div class="carousel-item" style="background-image: linear-gradient(0deg,rgba(44, 44, 51, 0.192), rgba(51, 48, 48, 0.473)), url(/Assets/img/raja_ampat_islands.jpg); background-size: cover; background-position: center; background-repeat: no-repeat;">
+              <div class="carousel-item" style="background-image: linear-gradient(0deg,rgba(44, 44, 51, 0.192), rgba(51, 48, 48, 0.473)), url(./Assets/img/raja_ampat_islands.jpg); background-size: cover; background-position: center; background-repeat: no-repeat;">
                 <div class="content">
                   <div class="isi" style="margin-right: 5%; margin-left: 5%;">
                     <h2>Wisata Pulau Raja Ampat</h2>
@@ -200,14 +200,14 @@
                     <button class="btn btn-primary" onclick="galery()" >Selengkapnya</button>
                   </div>
                   <div class="card">
-                    <img src="/Assets/img/Kepulauan-Raja-Ampat-Papua.jpg" alt="">
+                    <img src="./Assets/img/Kepulauan-Raja-Ampat-Papua.jpg" alt="">
                   </div>
                 </div>
               </div>
-              <div class="carousel-item" style="background-image: linear-gradient(0deg,rgba(44, 44, 51, 0.192), rgba(51, 48, 48, 0.473)), url(/Assets/img/Candi-Borobudur-Magelang-1536x1025.jpg); background-size: cover; background-position: center; background-repeat: no-repeat;">
+              <div class="carousel-item" style="background-image: linear-gradient(0deg,rgba(44, 44, 51, 0.192), rgba(51, 48, 48, 0.473)), url(./Assets/img/Candi-Borobudur-Magelang-1536x1025.jpg); background-size: cover; background-position: center; background-repeat: no-repeat;">
                 <div class="content">
                   <div class="card">
-                    <img src="/Assets/img/yogya.jpg" alt="">
+                    <img src="./Assets/img/yogya.jpg" alt="">
                   </div>
                   <div class="isi" style="margin-left: 5%;">
                     <h2>Wisata Keliling Yogyakarta</h2>
@@ -245,7 +245,7 @@
             <div class="row">
               <div class="col-lg-4 ">
                 <div class="card" data-aos="zoom-in" data-aos-duration="1000">
-                  <img src="/Assets/img/bromo.jpg" alt="">
+                  <img src="./Assets/img/bromo.jpg" alt="">
                   <div class="info p-4">
                     <h3>Wisata Bromo</h3>
                     <p>Gunung Bromo adalah salah satu gunung yang indah, Gunung Bromo Terletak di Jawa Timur.</p>
@@ -256,7 +256,7 @@
   
               <div class="col-lg-4">
                 <div class="card" data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="200">
-                  <img src="/Assets/img/Bali.jpg" alt="">
+                  <img src="./Assets/img/Bali.jpg" alt="">
                   <div class="info p-4">
                     <h3>Wisata Bali</h3>
                     <p>Bali menawarkan berbagai wisata Pantai Kuta, Pantai Legian, Pura Tanah Lot dan suasana pedesaan Ubud.</p>
@@ -267,7 +267,7 @@
   
               <div class="col-lg-4">
                 <div class="card" data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="300">
-                  <img src="/Assets/img/Lombok.jpg" alt="">
+                  <img src="./Assets/img/Lombok.jpg" alt="">
                   <div class="info p-4">
                     <h3>Wisata Lombok</h3>
                     <p>Lombok, terletak di timur Bali, adalah destinasi yang memesona dengan daya tarik alam dan budaya yang khas</p>
@@ -278,7 +278,7 @@
   
               <div class="col-lg-4">
                 <div class="card" data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="400">
-                  <img src="/Assets/img/yogya.jpg" alt="">
+                  <img src="./Assets/img/yogya.jpg" alt="">
                   <div class="info p-4">
                     <h3>Wisata Yogyakarta</h3>
                     <p>Yogyakarta memiliki banyak tempat wisata di antaranya wiata candi, pantai, dan wisata alam dan wisata candi </p>
@@ -289,7 +289,7 @@
   
               <div class="col-lg-4">
                 <div class="card" data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="500">
-                  <img src="/Assets/img/bunaken.jpg" alt="">
+                  <img src="./Assets/img/bunaken.jpg" alt="">
                   <div class="info p-4">
                     <h3>Wisata Bunaken</h3>
                     <p>Taman Laut Bunaken yang bertempat di Provinsi Sulawesi Utara.yang merupakan kawasan konservasi terumbu karang dan biota laut lain dengan luas</p>
@@ -300,7 +300,7 @@
   
               <div class="col-lg-4">
                 <div class="card" data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="600">
-                  <img src="/Assets/img/Kepulauan-Seribu.jpg" alt="">
+                  <img src="./Assets/img/Kepulauan-Seribu.jpg" alt="">
                   <div class="info p-4">
                     <h3>Wisata Kepuilauan Seribu</h3>
                     <p> Kepulauan seribu juga memiliki banyak pulau di antaranya adalah Pulau Kahyangan, Pulau Pabelokan, dan Pulau Bidadari</p>
@@ -319,18 +319,18 @@
           <div class="container">
             <div class="col-12 mt-4">
               <div class="sponsor">
-                <img src="/Assets/img/Logo_WI_Final_20092017_ab0ba6b8db.png" alt="">
-                <img src="/Assets/img/itstimeforbali-01-removebg-preview.png" alt="">
-                <img src="/Assets/img/wisata-indonesia-removebg-preview.png" alt="">
-                <img src="/Assets/img/Indonesian_Cultural_Night-removebg-preview.png" alt="">
+                <img src="./Assets/img/Logo_WI_Final_20092017_ab0ba6b8db.png" alt="">
+                <img src="./Assets/img/itstimeforbali-01-removebg-preview.png" alt="">
+                <img src="./Assets/img/wisata-indonesia-removebg-preview.png" alt="">
+                <img src="./Assets/img/Indonesian_Cultural_Night-removebg-preview.png" alt="">
               </div>
               <div class="body mt-4 mb-5">
                 <h3>Ada yang bisa kami bantu?</h3>
                 <div class="underline mx-auto"></div>
                 <p class="mx-auto mt-3" style="width: 50%;">Apakah Anda ingin mencari tur atau menghubungi pemandu? Mulailah dengan alat Temukan Tur kami.
                     Jika Anda memerlukan bantuan dari Tim kami, Anda dapat menghubungi kami kapan saja.</p>
-                <img src="/Assets/img/whatsapp.png" alt=""> <a href="https://api.whatsapp.com/send?phone=62895331887310" class="btn btn-primary" target="_blank">WhatsApp</a>
-                <img src="/Assets/img/gmail.png" alt=""> <a href="mailto:ibunu.nurdiyansa28@gmail.com?Subject=Mau%20tanya" class="btn btn-primary">Email</a>
+                <img src="./Assets/img/whatsapp.png" alt=""> <a href="https://api.whatsapp.com/send?phone=62895331887310" class="btn btn-primary" target="_blank">WhatsApp</a>
+                <img src="./Assets/img/gmail.png" alt=""> <a href="mailto:ibunu.nurdiyansa28@gmail.com?Subject=Mau%20tanya" class="btn btn-primary">Email</a>
               </div>
             </div>
           </div>
@@ -348,7 +348,7 @@
       </div>
     </div>
 
-    <script src="/Assets/js/script.js"></script>
+    <script src="./Assets/js/script.js"></script>
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>AOS.init();</script>
