--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
     </nav>
 
-    <section id="header">
+    <section id="header" style="background-image: url(/Assets/img/Gunung-Bromo-Jawa-Timur.jpg");>
       <div class="header">
         <div class="container">
           <div class="row">
