--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                   <div class="info p-4">
                     <h3>Wisata Bromo</h3>
                     <p>Gunung Bromo adalah salah satu gunung yang indah, Gunung Bromo Terletak di Jawa Timur.</p>
-                    <button  class="btn btn-primary"><a href="./bromo.html"></a>Selengkapnya...</button>
+                    <button  class="btn btn-primary" onclick="bromo()"><a href=""></a>Selengkapnya...</button>
                   </div>
                 </div>
               </div>
