--- a/bromo.html
+++ b/bromo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My WEB</title>
-    <link rel="shortcut icon" href="/Assets/img/Logo universitas pamulang.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./Assets/img/Logo universitas pamulang.png" type="image/x-icon">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     
@@ -16,7 +16,7 @@
 
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
-    <link rel="stylesheet" href="/Assets/CSS/style.css">
+    <link rel="stylesheet" href="./Assets/CSS/style.css">
 </head>
 <body>
   
@@ -45,7 +45,7 @@
               </li>
             </ul>
             <div class="sosmed">
-                <a href="https://api.whatsapp.com/send?phone=62895331887310" class="" target="_blank"><img src="/Assets/img/whatsapp.png" alt="" srcset="" style="width: 24px; width: 24px; margin-right: 10px;">Whatsapp</a>
+                <a href="https://api.whatsapp.com/send?phone=62895331887310" class="" target="_blank"><img src="./Assets/img/whatsapp.png" alt="" srcset="" style="width: 24px; width: 24px; margin-right: 10px;">Whatsapp</a>
             </div>
           </div>
         </div>
@@ -58,19 +58,19 @@
                     <div class="content-blog mx-auto mt-5" data-aos="fade-up" data-aos-duration="2000">
                         <h1>Wisata Tour Bromo </h1>
                         <div class="underline mx-auto mb-5"></div>
-                        <img src="/Assets/img/Gunung-Bromo-Jawa-Timur.jpg" alt=""  data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
+                        <img src="./Assets/img/Gunung-Bromo-Jawa-Timur.jpg" alt=""  data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
                         <p class="mt-5 mb-4"  data-aos="fade-right" data-aos-duration="700">
                             Gunung Bromo adalah salah satu gunung yang sangat populer di kalangan wisatawan karena menawarkan keindahan alam Indonesia yang menakjubkan. Salah satu yang paling terkenal dan menarik perhatian wisatawan domestik maupun internasional adalah Gunung Bromo. Terletak di Jawa Timur, Gunung Bromo menawarkan pemandangan alam yang spektakuler dan pengalaman yang tak terlupakan bagi para pengunjungnya. Meskipun berstatus sebagai gunung berapi aktif, Bromo tidak pernah sepi dari pengunjung. 
                             Ada sejumlah spot menarik di sekitar kawasan Gunung Bromo yang menjadi favorit wisatawan. Salah satunya, Puncak Panjakan
                         </p>
                         <h1 class="mb-4 text-start">Puncak Panjakan</h1>
-                        <img src="/Assets/img/bromo.jpg" alt=""  data-aos="fade-up" data-aos-duration="1000">
+                        <img src="./Assets/img/bromo.jpg" alt=""  data-aos="fade-up" data-aos-duration="1000">
                         <p class="mt-5 mb-4"  data-aos="fade-down" data-aos-duration="1000" data-aos-delay="200">
                             Puncak Penanjakan yang kerap menjadi lokasi untuk menyaksikan panorama matahari terbit. Puncak Penanjakan telah dilengkapi dengan berbagai fasilitas, mulai dari toilet, Mushola, hingga kios makanan.
                             Selain Puncak Penanjakan, kamu juga wajib berkunjung ke Pasir Berbisik. Ini adalah hamparan padang pasir seluas 5.920 hektare yang terletak di jalur menuju puncak Bromo. Tekstur pasirnya halus dan berwarna hitam. Pemandangan alam di tempat ini terlihat semakin eksotis dengan keberadaan tebing-tebing megah di sekitarnya.
                         </p>
                         <h1 class="mb-4 text-start">Padang Pasir</h1>
-                        <img src="/Assets/img/pasir_bromo.jpg" alt=""  data-aos="fade-right" data-aos-duration="1000">
+                        <img src="./Assets/img/pasir_bromo.jpg" alt=""  data-aos="fade-right" data-aos-duration="1000">
                         <p class="mt-5 mb-5"  data-aos="zoom-in" data-aos-duration="700" data-aos-delay="200">
                             Bagi para pecinta petualangan dan hiking, mendaki ke puncak Gunung Bromo merupakan pengalaman yang mendebarkan. Rute pendakian ini umumnya dimulai dari Desa Cemoro Lawang. Meski bukan pendakian yang sulit, pemandangan di sepanjang perjalanan sangatlah memukau, memberikan kesempatan bagi para pendaki untuk menikmati keindahan alam sekitar.
                             Gunung Bromo tidak hanya menawarkan keindahan alam yang memukau tetapi juga menyuguhkan pengalaman budaya dan petualangan yang tak terlupakan. Dengan pesona abadi yang dimilikinya, Gunung Bromo tetap menjadi destinasi wisata yang sangat dicari dan dijelajahi oleh para pelancong, menciptakan kenangan indah sepanjang masa.
@@ -87,18 +87,18 @@
             <div class="container">
               <div class="col-12 mt-4">
                 <div class="sponsor">
-                  <img src="/Assets/img/Logo_WI_Final_20092017_ab0ba6b8db.png" alt="">
-                  <img src="/Assets/img/itstimeforbali-01-removebg-preview.png" alt="">
-                  <img src="/Assets/img/wisata-indonesia-removebg-preview.png" alt="">
-                  <img src="/Assets/img/Indonesian_Cultural_Night-removebg-preview.png" alt="">
+                  <img src="./Assets/img/Logo_WI_Final_20092017_ab0ba6b8db.png" alt="">
+                  <img src="./Assets/img/itstimeforbali-01-removebg-preview.png" alt="">
+                  <img src="./Assets/img/wisata-indonesia-removebg-preview.png" alt="">
+                  <img src="./Assets/img/Indonesian_Cultural_Night-removebg-preview.png" alt="">
                 </div>
                 <div class="body mt-4 mb-5">
                   <h3>Ada yang bisa kami bantu?</h3>
                   <div class="underline mx-auto"></div>
                   <p class="mx-auto mt-3" style="width: 50%;">Apakah Anda ingin mencari tur atau menghubungi pemandu? Mulailah dengan alat Temukan Tur kami.
                       Jika Anda memerlukan bantuan dari Tim kami, Anda dapat menghubungi kami kapan saja.</p>
-                  <img src="/Assets/img/whatsapp.png" alt=""> <a href="https://api.whatsapp.com/send?phone=62895331887310" class="btn btn-primary" target="_blank">WhatsApp</a>
-                  <img src="/Assets/img/gmail.png" alt=""> <a href="mailto:ibunu.nurdiyansa28@gmail.com?Subject=Mau%20tanya" class="btn btn-primary">Email</a>
+                  <img src="./Assets/img/whatsapp.png" alt=""> <a href="https://api.whatsapp.com/send?phone=62895331887310" class="btn btn-primary" target="_blank">WhatsApp</a>
+                  <img src="./Assets/img/gmail.png" alt=""> <a href="mailto:ibunu.nurdiyansa28@gmail.com?Subject=Mau%20tanya" class="btn btn-primary">Email</a>
                 </div>
               </div>
             </div>
@@ -117,7 +117,7 @@
     </div>
   
 
-    <script src="/Assets/js/script.js"></script>
+    <script src="./Assets/js/script.js"></script>
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>AOS.init();</script>
