--- a/bali.html
+++ b/bali.html
@@ -56,24 +56,21 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content-blog mx-auto mt-5" data-aos="fade-up" data-aos-duration="2000">
-                        <h1>Wisata Tour Bromo </h1>
+                        <h1>Wisata Tour Bali </h1>
                         <div class="underline mx-auto mb-5"></div>
-                        <img src="/Assets/img/Gunung-Bromo-Jawa-Timur.jpg" alt=""  data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
+                        <img src="/Assets/img/bali.png" alt=""  data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
                         <p class="mt-5 mb-4"  data-aos="fade-right" data-aos-duration="700">
-                            Gunung Bromo adalah salah satu gunung yang sangat populer di kalangan wisatawan karena menawarkan keindahan alam Indonesia yang menakjubkan. Salah satu yang paling terkenal dan menarik perhatian wisatawan domestik maupun internasional adalah Gunung Bromo. Terletak di Jawa Timur, Gunung Bromo menawarkan pemandangan alam yang spektakuler dan pengalaman yang tak terlupakan bagi para pengunjungnya. Meskipun berstatus sebagai gunung berapi aktif, Bromo tidak pernah sepi dari pengunjung. 
-                            Ada sejumlah spot menarik di sekitar kawasan Gunung Bromo yang menjadi favorit wisatawan. Salah satunya, Puncak Panjakan
+                           Bali, sebuah pulau di Indonesia, dikenal sebagai surga wisata dengan keindahan alamnya yang memukau, budaya yang kaya, dan pantai-pantai yang mempesona. Salah satu daya tarik utama Bali adalah keindahan alamnya yang menakjubkan. Dari sawah terasering yang hijau di Tegallalang hingga gunung-gunung yang menjulang tinggi, Bali menawarkan pemandangan alam yang sangat memukau. Wisatawan sering mengunjungi Gunung Batur untuk menikmati pemandangan matahari terbit yang spektakuler atau menyaksikan tarian air terjun yang indah di Sekumpul.
                         </p>
-                        <h1 class="mb-4 text-start">Puncak Panjakan</h1>
-                        <img src="/Assets/img/bromo.jpg" alt=""  data-aos="fade-up" data-aos-duration="1000">
+                        <h1 class="mb-4 text-start">Kuil Terkenal</h1>
+                        <img src="/Assets/img/besakih-temple-2.jpg" alt=""  data-aos="fade-up" data-aos-duration="1000">
                         <p class="mt-5 mb-4"  data-aos="fade-down" data-aos-duration="1000" data-aos-delay="200">
-                            Puncak Penanjakan yang kerap menjadi lokasi untuk menyaksikan panorama matahari terbit. Puncak Penanjakan telah dilengkapi dengan berbagai fasilitas, mulai dari toilet, Mushola, hingga kios makanan.
-                            Selain Puncak Penanjakan, kamu juga wajib berkunjung ke Pasir Berbisik. Ini adalah hamparan padang pasir seluas 5.920 hektare yang terletak di jalur menuju puncak Bromo. Tekstur pasirnya halus dan berwarna hitam. Pemandangan alam di tempat ini terlihat semakin eksotis dengan keberadaan tebing-tebing megah di sekitarnya.
+                           Bali juga terkenal dengan warisan budayanya yang kaya. Kuil-kuil kuno seperti Pura Besakih atau Pura Tanah Lot mencerminkan keagungan arsitektur Hindu-Bali, dan sering kali menjadi tujuan utama bagi wisatawan yang ingin merasakan atmosfer rohaniah pulau ini. Upacara keagamaan dan tarian tradisional seperti Kecak dan Barong menawarkan pengalaman budaya yang mendalam. Selain itu, seni dan kerajinan Bali, seperti ukiran kayu, patung, dan lukisan, memperkaya pengalaman wisatawan yang mencari benda-benda unik sebagai kenang-kenangan.
                         </p>
-                        <h1 class="mb-4 text-start">Padang Pasir</h1>
-                        <img src="/Assets/img/pasir_bromo.jpg" alt=""  data-aos="fade-right" data-aos-duration="1000">
+                        <h1 class="mb-4 text-start">Pantai Indah</h1>
+                        <img src="/Assets/img/wisata_pantai.jpg" alt=""  data-aos="fade-right" data-aos-duration="1000">
                         <p class="mt-5 mb-5"  data-aos="zoom-in" data-aos-duration="700" data-aos-delay="200">
-                            Bagi para pecinta petualangan dan hiking, mendaki ke puncak Gunung Bromo merupakan pengalaman yang mendebarkan. Rute pendakian ini umumnya dimulai dari Desa Cemoro Lawang. Meski bukan pendakian yang sulit, pemandangan di sepanjang perjalanan sangatlah memukau, memberikan kesempatan bagi para pendaki untuk menikmati keindahan alam sekitar.
-                            Gunung Bromo tidak hanya menawarkan keindahan alam yang memukau tetapi juga menyuguhkan pengalaman budaya dan petualangan yang tak terlupakan. Dengan pesona abadi yang dimilikinya, Gunung Bromo tetap menjadi destinasi wisata yang sangat dicari dan dijelajahi oleh para pelancong, menciptakan kenangan indah sepanjang masa.
+                            Tidak dapat dipungkiri bahwa pantai-pantai Bali menjadi daya tarik utama bagi pengunjung dari seluruh dunia. Pantai Kuta yang terkenal dengan pasir putihnya yang lembut dan ombaknya yang cocok untuk berselancar, sering menjadi tempat favorit para peselancar. Pantai-pantai lain seperti Uluwatu, Seminyak, dan Nusa Dua juga menawarkan keindahan alam yang menakjubkan serta berbagai kegiatan rekreasi dan hiburan malam. Bali, dengan keunikan dan keragaman yang dimilikinya, menjadi destinasi wisata yang tak terlupakan bagi setiap pengunjung yang mencari pengalaman liburan yang istimewa.
                         </p>
                     </div>
                 </div>
@@ -116,6 +113,7 @@
         </div>
     </div>
   
+
     <script src="/Assets/js/script.js"></script>
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
