--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
     </nav>
 
-    <section id="header">
+    <section id="header" style="background-image: linear-gradient(0deg,rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5)), url(/Assets/img/Gunung-Bromo-Jawa-Timur.jpg);">
       <div class="header">
         <div class="container">
           <div class="row">
@@ -61,7 +61,7 @@
               <div class="sosmed mt-3">
                 <div class="icon facebook" data-aos="fade-up" data-aos-duration="2000" >
                   <div class="tooltip">Facebook</div>
-                  <span><a href="http://" style="text-decoration: none; color: white;"><i class="fab fa-facebook"></i></a></span>
+                  <span><a href="https://www.facebook.com/ibnu.nurdiyansa" style="text-decoration: none; color: white;"><i class="fab fa-facebook"></i></a></span>
                 </div>
                 <div class="icon twiter"  data-aos="fade-up" data-aos-duration="2000" data-aos-delay="200">
                   <div class="tooltip">Twiter</div>
@@ -69,7 +69,7 @@
                 </div>
                 <div class="icon instagram"  data-aos="fade-up" data-aos-duration="2000" data-aos-delay="300">
                   <div class="tooltip">Instagram</div>
-                  <span><a href="http://" style="text-decoration: none; color: white;"><i class="fab fa-instagram"></i></a></span>
+                  <span><a href="https://www.instagram.com/ibnu_nurdiyansa/" style="text-decoration: none; color: white;"><i class="fab fa-instagram"></i></a></span>
                 </div>
               </div>
             </div>
@@ -186,21 +186,21 @@
                         Dari sekian banyak tempat wisata menarik, yang paling populer di telinga wisatawan tentu saja Pantai Kuta, Pantai Legian, Pantai Seminyak, 
                         Pura Tanah Lot dan suasana pedesaan Ubud.
                     </p>
-                    <button class="btn btn-primary" onclick="galery()" >Selengkapnya</button>
+                    <a href="bali.html"><button class="btn btn-primary" >Selengkapnya</button></a>
                   </div>
                 </div>
               </div>
               <div class="carousel-item" style="background-image: linear-gradient(0deg,rgba(44, 44, 51, 0.192), rgba(51, 48, 48, 0.473)), url(/Assets/img/raja_ampat_islands.jpg); background-size: cover; background-position: center; background-repeat: no-repeat;">
                 <div class="content">
+                  <div class="card">
+                    <img src="/Assets/img/Kepulauan-Raja-Ampat-Papua.jpg" alt="">
+                  </div>
                   <div class="isi" style="margin-right: 5%; margin-left: 5%;">
                     <h2>Wisata Pulau Raja Ampat</h2>
                     <p>
                       Raja Ampat menjadi primadona baru di dunia pariwisata Indonesia yang menjadi tempat wisata terindah di indonesia, Raja Ampat sendiri merupakan kumpulan dari pulau-pulau di ujung Papua. Perairan di tempat wisata ini dikenal sebagai salah satu lokasi menyelam dan snorkeling terbaik di dunia.
                     </p>
-                    <button class="btn btn-primary" onclick="galery()" >Selengkapnya</button>
-                  </div>
-                  <div class="card">
-                    <img src="/Assets/img/Kepulauan-Raja-Ampat-Papua.jpg" alt="">
+                    <a href="kepulauanseribu.html"><button class="btn btn-primary" >Selengkapnya</button></a>
                   </div>
                 </div>
               </div>
@@ -215,7 +215,7 @@
                       Kota Yogyakarta merukan kota yang menawarkan keindahan alamnya yang indah, Yogyakarta merupakan spot destinasi wisata ysng paling banyak di tuju oleh para touris dan orang lokal.
                       di antaranya wiata candi, pantai, dan wisata alam, yang paling populer adalah wisata candi yang memiliki sejarah didalammnya.
                     </p>
-                    <button class="btn btn-primary" onclick="galery()" >Selengkapnya</button>
+                    <a href="jogja.html"><button class="btn btn-primary" >Selengkapnya</button></a>
                   </div>
                 </div>
               </div>
@@ -249,7 +249,7 @@
                   <div class="info p-4">
                     <h3>Wisata Bromo</h3>
                     <p>Gunung Bromo adalah salah satu gunung yang indah, Gunung Bromo Terletak di Jawa Timur.</p>
-                    <button  class="btn btn-primary" onclick="galery()"><a href="/bromo.html"></a>Selengkapnya...</button>
+                    <a href="bromo.html"><button  class="btn btn-primary">Selengkapnya...</button></a>
                   </div>
                 </div>
               </div>
@@ -260,7 +260,7 @@
                   <div class="info p-4">
                     <h3>Wisata Bali</h3>
                     <p>Bali menawarkan berbagai wisata Pantai Kuta, Pantai Legian, Pura Tanah Lot dan suasana pedesaan Ubud.</p>
-                    <button  class="btn btn-primary" onclick="galery()"><a href="/bromo.html"></a>Selengkapnya...</button>
+                    <a href="bali.html"><button  class="btn btn-primary">Selengkapnya...</button></a>
                   </div>
                 </div>
               </div>
@@ -271,7 +271,7 @@
                   <div class="info p-4">
                     <h3>Wisata Lombok</h3>
                     <p>Lombok, terletak di timur Bali, adalah destinasi yang memesona dengan daya tarik alam dan budaya yang khas</p>
-                    <button  class="btn btn-primary" onclick="galery()"><a href="/bromo.html"></a>Selengkapnya...</button>
+                    <a href="lombok.html"><button  class="btn btn-primary">Selengkapnya...</button></a>
                   </div>
                 </div>
               </div>
@@ -282,7 +282,7 @@
                   <div class="info p-4">
                     <h3>Wisata Yogyakarta</h3>
                     <p>Yogyakarta memiliki banyak tempat wisata di antaranya wiata candi, pantai, dan wisata alam dan wisata candi </p>
-                    <button  class="btn btn-primary" onclick="galery()"><a href="/bromo.html"></a>Selengkapnya...</button>
+                    <a href="jogja.html"><button  class="btn btn-primary">Selengkapnya...</button></a>
                   </div>
                 </div>
               </div>
@@ -293,7 +293,7 @@
                   <div class="info p-4">
                     <h3>Wisata Bunaken</h3>
                     <p>Taman Laut Bunaken yang bertempat di Provinsi Sulawesi Utara.yang merupakan kawasan konservasi terumbu karang dan biota laut lain dengan luas</p>
-                    <button  class="btn btn-primary" onclick="galery()"><a href="/bromo.html"></a>Selengkapnya...</button>
+                    <a href="bunaken.html"><button  class="btn btn-primary">Selengkapnya...</button></a>
                   </div>
                 </div>
               </div>
@@ -304,7 +304,7 @@
                   <div class="info p-4">
                     <h3>Wisata Kepuilauan Seribu</h3>
                     <p> Kepulauan seribu juga memiliki banyak pulau di antaranya adalah Pulau Kahyangan, Pulau Pabelokan, dan Pulau Bidadari</p>
-                    <button  class="btn btn-primary" onclick="galery()"><a href="/bromo.html"></a>Selengkapnya...</button>
+                    <a href="kepulauanseribu.html"><button  class="btn btn-primary">Selengkapnya...</button></a>
                   </div>
                 </div>
               </div>
