--- a/jogja.html
+++ b/jogja.html
@@ -56,24 +56,21 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content-blog mx-auto mt-5" data-aos="fade-up" data-aos-duration="2000">
-                        <h1>Wisata Tour Bromo </h1>
+                        <h1>Wisata Tour Yogyakarta </h1>
                         <div class="underline mx-auto mb-5"></div>
-                        <img src="/Assets/img/Gunung-Bromo-Jawa-Timur.jpg" alt=""  data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
+                        <img src="/Assets/img/tugujogja.jpg" alt=""  data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
                         <p class="mt-5 mb-4"  data-aos="fade-right" data-aos-duration="700">
-                            Gunung Bromo adalah salah satu gunung yang sangat populer di kalangan wisatawan karena menawarkan keindahan alam Indonesia yang menakjubkan. Salah satu yang paling terkenal dan menarik perhatian wisatawan domestik maupun internasional adalah Gunung Bromo. Terletak di Jawa Timur, Gunung Bromo menawarkan pemandangan alam yang spektakuler dan pengalaman yang tak terlupakan bagi para pengunjungnya. Meskipun berstatus sebagai gunung berapi aktif, Bromo tidak pernah sepi dari pengunjung. 
-                            Ada sejumlah spot menarik di sekitar kawasan Gunung Bromo yang menjadi favorit wisatawan. Salah satunya, Puncak Panjakan
+                           Yogyakarta, atau lebih akrab disapa Jogja, adalah destinasi wisata di Indonesia yang kaya akan budaya dan sejarah. Titik sentral kehidupan budaya Jawa, kota ini menawarkan pengalaman unik dalam menjelajahi warisan sejarahnya. Istana Keraton Yogyakarta, sebagai simbol kebesaran kerajaan Mataram Islam, memukau pengunjung dengan arsitektur megah dan koleksi seni yang berharga. Kesempatan untuk menyaksikan tradisi tari, wayang kulit, dan upacara keagamaan di Keraton menjadi pengalaman tak terlupakan yang mendalam.
                         </p>
-                        <h1 class="mb-4 text-start">Puncak Panjakan</h1>
-                        <img src="/Assets/img/bromo.jpg" alt=""  data-aos="fade-up" data-aos-duration="1000">
+                        <h1 class="mb-4 text-start">Wisata Lainnya di Yogyakarta</h1>
+                        <img src="/Assets/img/Candi-Prambanan-3.jpg" alt=""  data-aos="fade-up" data-aos-duration="1000">
                         <p class="mt-5 mb-4"  data-aos="fade-down" data-aos-duration="1000" data-aos-delay="200">
-                            Puncak Penanjakan yang kerap menjadi lokasi untuk menyaksikan panorama matahari terbit. Puncak Penanjakan telah dilengkapi dengan berbagai fasilitas, mulai dari toilet, Mushola, hingga kios makanan.
-                            Selain Puncak Penanjakan, kamu juga wajib berkunjung ke Pasir Berbisik. Ini adalah hamparan padang pasir seluas 5.920 hektare yang terletak di jalur menuju puncak Bromo. Tekstur pasirnya halus dan berwarna hitam. Pemandangan alam di tempat ini terlihat semakin eksotis dengan keberadaan tebing-tebing megah di sekitarnya.
+                          Selain kekayaan budayanya, Yogyakarta juga mempesona dengan keindahan alamnya yang beragam. Candi Prambanan, sebuah kompleks candi Hindu yang spektakuler, adalah destinasi yang wajib dikunjungi untuk menikmati arsitektur yang anggun dan sejarahnya yang kaya. Di sebelah selatan kota, Pantai Parangtritis menawarkan pemandangan pantai yang luas dengan pasir hitam yang kontras dengan ombak Samudra Hindia. Wisatawan juga dapat menjelajahi gua-gua yang menakjubkan seperti Gua Jomblang dan Gua Pindul, yang memberikan pengalaman petualangan yang seru.
                         </p>
-                        <h1 class="mb-4 text-start">Padang Pasir</h1>
-                        <img src="/Assets/img/pasir_bromo.jpg" alt=""  data-aos="fade-right" data-aos-duration="1000">
+                        <h1 class="mb-4 text-start">Sensasi Kuliner</h1>
+                        <img src="/Assets/img/jalanmalioboro.jpg" alt=""  data-aos="fade-right" data-aos-duration="1000">
                         <p class="mt-5 mb-5"  data-aos="zoom-in" data-aos-duration="700" data-aos-delay="200">
-                            Bagi para pecinta petualangan dan hiking, mendaki ke puncak Gunung Bromo merupakan pengalaman yang mendebarkan. Rute pendakian ini umumnya dimulai dari Desa Cemoro Lawang. Meski bukan pendakian yang sulit, pemandangan di sepanjang perjalanan sangatlah memukau, memberikan kesempatan bagi para pendaki untuk menikmati keindahan alam sekitar.
-                            Gunung Bromo tidak hanya menawarkan keindahan alam yang memukau tetapi juga menyuguhkan pengalaman budaya dan petualangan yang tak terlupakan. Dengan pesona abadi yang dimilikinya, Gunung Bromo tetap menjadi destinasi wisata yang sangat dicari dan dijelajahi oleh para pelancong, menciptakan kenangan indah sepanjang masa.
+                          Jogja tidak hanya menawarkan keindahan alam dan sejarah, tetapi juga menjelma sebagai surga kuliner. Jalan Malioboro, jantung kota, merupakan pusat perbelanjaan dan kuliner yang ramai, menawarkan berbagai makanan khas seperti gudeg, bakpia, dan angkringan. Warung-warung kaki lima yang tersebar di berbagai sudut kota memanjakan lidah pengunjung dengan hidangan lezat dan autentik. Selain itu, keberagaman kuliner di Jogja mencerminkan kekayaan budaya masyarakatnya, menciptakan pengalaman gastronomi yang tak terlupakan.
                         </p>
                     </div>
                 </div>
@@ -116,6 +113,7 @@
         </div>
     </div>
   
+
     <script src="/Assets/js/script.js"></script>
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
