--- a/kepulauanseribu.html
+++ b/kepulauanseribu.html
@@ -56,24 +56,21 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content-blog mx-auto mt-5" data-aos="fade-up" data-aos-duration="2000">
-                        <h1>Wisata Tour Bromo </h1>
+                        <h1>Wisata Tour Kepulauan Seribu  </h1>
                         <div class="underline mx-auto mb-5"></div>
-                        <img src="/Assets/img/Gunung-Bromo-Jawa-Timur.jpg" alt=""  data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
+                        <img src="/Assets/img/trip-liburan-pulau-sepa.jpg" alt=""  data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
                         <p class="mt-5 mb-4"  data-aos="fade-right" data-aos-duration="700">
-                            Gunung Bromo adalah salah satu gunung yang sangat populer di kalangan wisatawan karena menawarkan keindahan alam Indonesia yang menakjubkan. Salah satu yang paling terkenal dan menarik perhatian wisatawan domestik maupun internasional adalah Gunung Bromo. Terletak di Jawa Timur, Gunung Bromo menawarkan pemandangan alam yang spektakuler dan pengalaman yang tak terlupakan bagi para pengunjungnya. Meskipun berstatus sebagai gunung berapi aktif, Bromo tidak pernah sepi dari pengunjung. 
-                            Ada sejumlah spot menarik di sekitar kawasan Gunung Bromo yang menjadi favorit wisatawan. Salah satunya, Puncak Panjakan
+                          Kepulauan Seribu, terletak di utara Jakarta, merupakan surga tropis yang menakjubkan dengan pulau-pulau indahnya yang tersebar di Laut Jawa. Dengan judul "Kepulauan Seribu: Gemerlapnya Pesona Laut Jakarta," para wisatawan diajak untuk menjelajahi keindahan laut, pasir putih, dan kehidupan bawah laut yang memukau di pulau-pulau seperti Pulau Pramuka, Pulau Tidung, dan Pulau Pari. Kepulauan ini menawarkan peluang sempurna bagi pengunjung yang mencari ketenangan dan keindahan alam tropis tanpa harus berlayar jauh dari pusat kota Jakarta.
                         </p>
-                        <h1 class="mb-4 text-start">Puncak Panjakan</h1>
-                        <img src="/Assets/img/bromo.jpg" alt=""  data-aos="fade-up" data-aos-duration="1000">
+                        <h1 class="mb-4 text-start">Keaneragaman Ekosistem Laut</h1>
+                        <img src="/Assets/img/wisata-bawah-laut-pulau-seribu.jpg" alt=""  data-aos="fade-up" data-aos-duration="1000">
                         <p class="mt-5 mb-4"  data-aos="fade-down" data-aos-duration="1000" data-aos-delay="200">
-                            Puncak Penanjakan yang kerap menjadi lokasi untuk menyaksikan panorama matahari terbit. Puncak Penanjakan telah dilengkapi dengan berbagai fasilitas, mulai dari toilet, Mushola, hingga kios makanan.
-                            Selain Puncak Penanjakan, kamu juga wajib berkunjung ke Pasir Berbisik. Ini adalah hamparan padang pasir seluas 5.920 hektare yang terletak di jalur menuju puncak Bromo. Tekstur pasirnya halus dan berwarna hitam. Pemandangan alam di tempat ini terlihat semakin eksotis dengan keberadaan tebing-tebing megah di sekitarnya.
+                          Kepulauan Seribu bukan hanya destinasi wisata, tetapi juga menjalankan peran penting dalam pelestarian ekosistem laut. Taman Nasional Laut Kepulauan Seribu menjadi rumah bagi terumbu karang, biota laut, dan satwa liar yang menakjubkan. Dengan mempromosikan kesadaran lingkungan dan ekowisata, pengunjung diundang untuk menghargai dan melibatkan diri dalam pelestarian keanekaragaman hayati laut yang kaya di wilayah ini.
                         </p>
-                        <h1 class="mb-4 text-start">Padang Pasir</h1>
-                        <img src="/Assets/img/pasir_bromo.jpg" alt=""  data-aos="fade-right" data-aos-duration="1000">
+                        <h1 class="mb-4 text-start">Warisan Budaya Kepulauan Seribu</h1>
+                        <img src="/Assets/img/budayakepulauanseribu.jpg" alt=""  data-aos="fade-right" data-aos-duration="1000">
                         <p class="mt-5 mb-5"  data-aos="zoom-in" data-aos-duration="700" data-aos-delay="200">
-                            Bagi para pecinta petualangan dan hiking, mendaki ke puncak Gunung Bromo merupakan pengalaman yang mendebarkan. Rute pendakian ini umumnya dimulai dari Desa Cemoro Lawang. Meski bukan pendakian yang sulit, pemandangan di sepanjang perjalanan sangatlah memukau, memberikan kesempatan bagi para pendaki untuk menikmati keindahan alam sekitar.
-                            Gunung Bromo tidak hanya menawarkan keindahan alam yang memukau tetapi juga menyuguhkan pengalaman budaya dan petualangan yang tak terlupakan. Dengan pesona abadi yang dimilikinya, Gunung Bromo tetap menjadi destinasi wisata yang sangat dicari dan dijelajahi oleh para pelancong, menciptakan kenangan indah sepanjang masa.
+                          Selain keindahan alamnya, Kepulauan Seribu mengajak pengunjung untuk meresapi kehidupan pulau yang tenang dan kekayaan budaya lokalnya. Desa-desa nelayan tradisional, pasar tradisional, dan kegiatan budaya setempat memberikan pengalaman mendalam tentang kehidupan sehari-hari masyarakat kepulauan ini. Dengan mengeksplorasi pulau-pulau terpencil dan berinteraksi dengan penduduk setempat, wisatawan dapat merasakan kehangatan dan keunikan budaya lokal Kepulauan Seribu yang membuat perjalanan mereka menjadi lebih berkesan.
                         </p>
                     </div>
                 </div>
@@ -116,6 +113,7 @@
         </div>
     </div>
   
+
     <script src="/Assets/js/script.js"></script>
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
