--- a/lombok.html
+++ b/lombok.html
@@ -56,24 +56,21 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content-blog mx-auto mt-5" data-aos="fade-up" data-aos-duration="2000">
-                        <h1>Wisata Tour Bromo </h1>
+                        <h1>Wisata Tour Lombok </h1>
                         <div class="underline mx-auto mb-5"></div>
-                        <img src="/Assets/img/Gunung-Bromo-Jawa-Timur.jpg" alt=""  data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
+                        <img src="/Assets/img/LOMBOK1.jpg" alt=""  data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
                         <p class="mt-5 mb-4"  data-aos="fade-right" data-aos-duration="700">
-                            Gunung Bromo adalah salah satu gunung yang sangat populer di kalangan wisatawan karena menawarkan keindahan alam Indonesia yang menakjubkan. Salah satu yang paling terkenal dan menarik perhatian wisatawan domestik maupun internasional adalah Gunung Bromo. Terletak di Jawa Timur, Gunung Bromo menawarkan pemandangan alam yang spektakuler dan pengalaman yang tak terlupakan bagi para pengunjungnya. Meskipun berstatus sebagai gunung berapi aktif, Bromo tidak pernah sepi dari pengunjung. 
-                            Ada sejumlah spot menarik di sekitar kawasan Gunung Bromo yang menjadi favorit wisatawan. Salah satunya, Puncak Panjakan
+                            Lombok, pulau tetangga Bali di Indonesia, menyuguhkan pesona alam yang memukau dan keberagaman budaya yang menarik. Salah satu daya tarik utama pulau ini adalah Gili Trawangan, Gili Meno, dan Gili Air, tiga pulau kecil yang terletak di sebelah barat laut Lombok. Ketiga pulau ini dikenal dengan keindahan pantainya yang putih bersih, air laut yang jernih, dan kehidupan bawah laut yang menakjubkan, menjadikannya surga bagi penyelam dan penggemar aktivitas air.
                         </p>
-                        <h1 class="mb-4 text-start">Puncak Panjakan</h1>
-                        <img src="/Assets/img/bromo.jpg" alt=""  data-aos="fade-up" data-aos-duration="1000">
+                        <h1 class="mb-4 text-start">Destinasi Pendakian Populer</h1>
+                        <img src="/Assets/img/gunung-rinjani.jpg" alt=""  data-aos="fade-up" data-aos-duration="1000">
                         <p class="mt-5 mb-4"  data-aos="fade-down" data-aos-duration="1000" data-aos-delay="200">
-                            Puncak Penanjakan yang kerap menjadi lokasi untuk menyaksikan panorama matahari terbit. Puncak Penanjakan telah dilengkapi dengan berbagai fasilitas, mulai dari toilet, Mushola, hingga kios makanan.
-                            Selain Puncak Penanjakan, kamu juga wajib berkunjung ke Pasir Berbisik. Ini adalah hamparan padang pasir seluas 5.920 hektare yang terletak di jalur menuju puncak Bromo. Tekstur pasirnya halus dan berwarna hitam. Pemandangan alam di tempat ini terlihat semakin eksotis dengan keberadaan tebing-tebing megah di sekitarnya.
+                            Selain Gili, Gunung Rinjani, gunung berapi tertinggi kedua di Indonesia, adalah destinasi pendakian yang populer di Lombok. Pendakian ke puncak Rinjani tidak hanya menawarkan petualangan fisik yang menantang, tetapi juga pemandangan alam yang spektakuler, termasuk danau kawah yang indah. Wisatawan yang mencari pengalaman alam yang lebih tenang dapat menjelajahi Taman Nasional Gunung Rinjani, yang menampilkan keindahan hutan tropis, air terjun, dan flora endemik.
                         </p>
-                        <h1 class="mb-4 text-start">Padang Pasir</h1>
-                        <img src="/Assets/img/pasir_bromo.jpg" alt=""  data-aos="fade-right" data-aos-duration="1000">
+                        <h1 class="mb-4 text-start">Budaya Lombok</h1>
+                        <img src="/Assets/img/DesaSade.jpg" alt=""  data-aos="fade-right" data-aos-duration="1000">
                         <p class="mt-5 mb-5"  data-aos="zoom-in" data-aos-duration="700" data-aos-delay="200">
-                            Bagi para pecinta petualangan dan hiking, mendaki ke puncak Gunung Bromo merupakan pengalaman yang mendebarkan. Rute pendakian ini umumnya dimulai dari Desa Cemoro Lawang. Meski bukan pendakian yang sulit, pemandangan di sepanjang perjalanan sangatlah memukau, memberikan kesempatan bagi para pendaki untuk menikmati keindahan alam sekitar.
-                            Gunung Bromo tidak hanya menawarkan keindahan alam yang memukau tetapi juga menyuguhkan pengalaman budaya dan petualangan yang tak terlupakan. Dengan pesona abadi yang dimilikinya, Gunung Bromo tetap menjadi destinasi wisata yang sangat dicari dan dijelajahi oleh para pelancong, menciptakan kenangan indah sepanjang masa.
+                           Lombok juga dikenal dengan keberagaman budayanya. Desa Sade, misalnya, merupakan desa tradisional Sasak yang mempertahankan kebudayaan dan arsitektur khas. Pura Lingsar, tempat ibadah utama bagi umat Hindu dan Sasak, menunjukkan harmoni antara agama Hindu dan Islam di pulau ini. Dengan pantainya yang memukau, gunung yang megah, dan kebudayaan yang beragam, Lombok menawarkan pengalaman wisata yang unik dan memikat.
                         </p>
                     </div>
                 </div>
@@ -116,6 +113,7 @@
         </div>
     </div>
   
+
     <script src="/Assets/js/script.js"></script>
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
