--- a/bunaken.html
+++ b/bunaken.html
@@ -56,24 +56,21 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content-blog mx-auto mt-5" data-aos="fade-up" data-aos-duration="2000">
-                        <h1>Wisata Tour Bromo </h1>
+                        <h1>Wisata Tour Bunaken </h1>
                         <div class="underline mx-auto mb-5"></div>
-                        <img src="/Assets/img/Gunung-Bromo-Jawa-Timur.jpg" alt=""  data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
+                        <img src="/Assets/img/Taman-Bunaken.jpg" alt=""  data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
                         <p class="mt-5 mb-4"  data-aos="fade-right" data-aos-duration="700">
-                            Gunung Bromo adalah salah satu gunung yang sangat populer di kalangan wisatawan karena menawarkan keindahan alam Indonesia yang menakjubkan. Salah satu yang paling terkenal dan menarik perhatian wisatawan domestik maupun internasional adalah Gunung Bromo. Terletak di Jawa Timur, Gunung Bromo menawarkan pemandangan alam yang spektakuler dan pengalaman yang tak terlupakan bagi para pengunjungnya. Meskipun berstatus sebagai gunung berapi aktif, Bromo tidak pernah sepi dari pengunjung. 
-                            Ada sejumlah spot menarik di sekitar kawasan Gunung Bromo yang menjadi favorit wisatawan. Salah satunya, Puncak Panjakan
+                            Bunaken, yang terletak di Sulawesi Utara, Indonesia, mempersembahkan keindahan alam bawah laut yang memukau dan menjadi destinasi impian para penyelam. Dengan judul "Misteri Laut Bunaken," pengunjung dapat menjelajahi keanekaragaman hayati laut tengah yang luar biasa di Taman Nasional Bunaken. Terumbu karang yang indah, ikan-ikan berwarna-warni, dan biota laut eksotis menciptakan pengalaman menyelam yang tak terlupakan. Pulau-pulau sekitarnya, seperti Siladen dan Manado Tua, juga menawarkan pemandangan bawah laut yang menakjubkan.
                         </p>
-                        <h1 class="mb-4 text-start">Puncak Panjakan</h1>
-                        <img src="/Assets/img/bromo.jpg" alt=""  data-aos="fade-up" data-aos-duration="1000">
+                        <h1 class="mb-4 text-start">Pengalaman Ekowisata</h1>
+                        <img src="/Assets/img/ekowisatabunaken.jpg" alt=""  data-aos="fade-up" data-aos-duration="1000">
                         <p class="mt-5 mb-4"  data-aos="fade-down" data-aos-duration="1000" data-aos-delay="200">
-                            Puncak Penanjakan yang kerap menjadi lokasi untuk menyaksikan panorama matahari terbit. Puncak Penanjakan telah dilengkapi dengan berbagai fasilitas, mulai dari toilet, Mushola, hingga kios makanan.
-                            Selain Puncak Penanjakan, kamu juga wajib berkunjung ke Pasir Berbisik. Ini adalah hamparan padang pasir seluas 5.920 hektare yang terletak di jalur menuju puncak Bromo. Tekstur pasirnya halus dan berwarna hitam. Pemandangan alam di tempat ini terlihat semakin eksotis dengan keberadaan tebing-tebing megah di sekitarnya.
+                           Bunaken tidak hanya memikat penyelam, tetapi juga menawarkan pengalaman ekowisata yang memukau. Pulau ini menjadi surga bagi penggemar snorkeling yang ingin menyaksikan keindahan terumbu karang tanpa harus menyelam dalam. Pengunjung juga dapat menikmati keberagaman hayati di daratan dengan menjelajahi hutan mangrove dan mendaki bukit-bukit yang menawarkan pemandangan spektakuler. Melalui upaya pelestarian dan kesadaran      ekowisata, Bunaken mempromosikan keseimbangan antara keindahan alam dan keberlanjutan ekosistemnya.
                         </p>
-                        <h1 class="mb-4 text-start">Padang Pasir</h1>
-                        <img src="/Assets/img/pasir_bromo.jpg" alt=""  data-aos="fade-right" data-aos-duration="1000">
+                        <h1 class="mb-4 text-start">Kehangatan Pulau Bunaken</h1>
+                        <img src="/Assets/img/homestaybunaken].jpg" alt=""  data-aos="fade-right" data-aos-duration="1000">
                         <p class="mt-5 mb-5"  data-aos="zoom-in" data-aos-duration="700" data-aos-delay="200">
-                            Bagi para pecinta petualangan dan hiking, mendaki ke puncak Gunung Bromo merupakan pengalaman yang mendebarkan. Rute pendakian ini umumnya dimulai dari Desa Cemoro Lawang. Meski bukan pendakian yang sulit, pemandangan di sepanjang perjalanan sangatlah memukau, memberikan kesempatan bagi para pendaki untuk menikmati keindahan alam sekitar.
-                            Gunung Bromo tidak hanya menawarkan keindahan alam yang memukau tetapi juga menyuguhkan pengalaman budaya dan petualangan yang tak terlupakan. Dengan pesona abadi yang dimilikinya, Gunung Bromo tetap menjadi destinasi wisata yang sangat dicari dan dijelajahi oleh para pelancong, menciptakan kenangan indah sepanjang masa.
+                            Selain keindahan alamnya, Bunaken memanggil wisatawan untuk merasakan sentuhan kehidupan lokal yang hangat dan ramah. Pulau ini menawarkan pengalaman mendalam melalui interaksi dengan penduduknya yang ramah dan penuh kehangatan. Menginap di homestay atau berpartisipasi dalam kegiatan budaya setempat memberikan kesempatan unik untuk memahami lebih dekat kehidupan sehari-hari masyarakat Bunaken. Dalam perjalanan ini, wisatawan tidak hanya akan terpesona oleh keindahan alam bawah laut, tetapi juga akan merasakan kekayaan kemanusiaan dan kehangatan budaya lokal yang menjadi bagian tak terpisahkan dari pesona pulau ini
                         </p>
                     </div>
                 </div>
@@ -116,6 +113,7 @@
         </div>
     </div>
   
+
     <script src="/Assets/js/script.js"></script>
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
