--- a/content/rajaampat.html
+++ b/content/rajaampat.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My WEB</title>
-    <link rel="shortcut icon" href="/Assets/img/Logo universitas pamulang.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./Assets/img/Logo universitas pamulang.png" type="image/x-icon">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     
@@ -16,13 +16,13 @@
 
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
-    <link rel="stylesheet" href="/Assets/CSS/style.css">
+    <link rel="stylesheet" href="./Assets/CSS/style.css">
 </head>
 <body>
 
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark navbar-blog p-md-3">
     <div class="container">
-        <a class="navbar-brand" href="/index.html">TOUR GUIDE</a>
+        <a class="navbar-brand" href="./index.html">TOUR GUIDE</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -35,19 +35,19 @@
             <div class="offcanvas-body">
               <ul class="navbar-nav mx-auto">
                 <li class="nav-item mx-4">
-                  <a class="nav-link active" href="/index.html#home">Beranda</a>
+                  <a class="nav-link active" href="./index.html#home">Beranda</a>
                 </li>
                 <li class="nav-item mx-4">
-                  <a class="nav-link" href="/index.html#promo">Promo</a>
+                  <a class="nav-link" href="./index.html#promo">Promo</a>
                 </li>
                 <li class="nav-item mx-4">
-                  <a class="nav-link" href="/index.html#destination">Layanan</a>
+                  <a class="nav-link" href="./index.html#destination">Layanan</a>
                 </li>
                 <li class="nav-item mx-4">
-                  <a class="nav-link" href="/index.html#galery">Galery</a>
+                  <a class="nav-link" href="./index.html#galery">Galery</a>
                 </li>
                 <li class="nav-item mx-4 ">
-                  <a class="nav-link" href="/index.html#contack">Contact</a>
+                  <a class="nav-link" href="./index.html#contack">Contact</a>
                 </li>
               </ul>
               <div class="sosmed p-md-1 pt-3">
@@ -65,7 +65,7 @@
                     <div class="content-blog mx-auto mt-5" data-aos="fade-up" data-aos-duration="2000">
                         <h1>Raja Ampat Papua </h1>
                         <div class="underline mx-auto mb-5"></div>
-                        <img src="/Assets/img/raja_ampat_islands.jpg" alt=""  data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
+                        <img src="./Assets/img/raja_ampat_islands.jpg" alt=""  data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
                         <p class="mt-5 mb-4"  data-aos="fade-right" data-aos-duration="700">
                             Keindahan Raja Ampat memang tidak perlu diragukan lagi. Tempat ini merupakan salah satu surganya wisata alam dan bawah laut di Indonesia. Di sini kamu bisa menikmati keindahan alam yang sangat indah seperti di negeri dongeng.
                             Gugusan Kepulauan Raja Ampat yang luasnya hanya sekitar 8.000 km2 ini menyimpan banyak pesona alam yang indah. Kamu yang ingin menikmati keindahan alam permata Indonesia, wajib menyempatkan waktu untuk liburan ke sini.
@@ -73,7 +73,7 @@
                         </p>
 
                         <h1 class="mb-4 text-start">Bukit Pianemo</h1>
-                        <img src="/Assets/img/the-Island-that-should-be-visited-in-Raja-Ampat-Misool1.jpg" alt=""  data-aos="fade-up" data-aos-duration="1000">
+                        <img src="./Assets/img/the-Island-that-should-be-visited-in-Raja-Ampat-Misool1.jpg" alt=""  data-aos="fade-up" data-aos-duration="1000">
                         <p class="mt-5 mb-4"  data-aos="fade-down" data-aos-duration="1000" data-aos-delay="200">
                             Bukit pianemo merupakan tempat yang banyak dikunjungi wisatawan yang datang ke Raja Ampat. Untuk sampai ke atas bukit, Anda harus mendaki ratusan anak tangga. Sehingga pastikan Anda menyiapkan fisik yang kuat.
                              Namun tenang saja, karena di area anak tangga  tersedia pondok kecil untuk istirahat sejenak. Tak hanya pondok istirahat sepanjang perjalannya, fasilitas lain juga tersedia di atas bukit. Di sana terdapat balkon yang menghadap gugus Pulau Karst. 
@@ -105,18 +105,18 @@
           <div class="container">
             <div class="col-12 mt-4">
               <div class="sponsor">
-                <img src="/Assets/img/Logo_WI_Final_20092017_ab0ba6b8db.png" alt="">
-                <img src="/Assets/img/itstimeforbali-01-removebg-preview.png" alt="">
-                <img src="/Assets/img/wisata-indonesia-removebg-preview.png" alt="">
-                <img src="/Assets/img/Indonesian_Cultural_Night-removebg-preview.png" alt="">
+                <img src="./Assets/img/Logo_WI_Final_20092017_ab0ba6b8db.png" alt="">
+                <img src="./Assets/img/itstimeforbali-01-removebg-preview.png" alt="">
+                <img src="./Assets/img/wisata-indonesia-removebg-preview.png" alt="">
+                <img src="./Assets/img/Indonesian_Cultural_Night-removebg-preview.png" alt="">
               </div>
               <div class="body mt-4 mb-5">
                 <h3>Ada yang bisa kami bantu?</h3>
                 <div class="underline mx-auto"></div>
                 <p class="mx-auto mt-3">Apakah Anda ingin mencari tur atau menghubungi pemandu? Mulailah dengan alat Temukan Tur kami.
                     Jika Anda memerlukan bantuan dari Tim kami, Anda dapat menghubungi kami kapan saja.</p>
-                <img src="/Assets/img/whatsapp.png" alt=""> <a href="https://api.whatsapp.com/send?phone=62895331887310" class="btn btn-primary" target="_blank">WhatsApp</a>
-                <img src="/Assets/img/gmail.png" alt=""> <a href="mailto:ibunu.nurdiyansa28@gmail.com?Subject=Mau%20tanya" class="btn btn-primary">Email</a>
+                <img src="./Assets/img/whatsapp.png" alt=""> <a href="https://api.whatsapp.com/send?phone=62895331887310" class="btn btn-primary" target="_blank">WhatsApp</a>
+                <img src="./Assets/img/gmail.png" alt=""> <a href="mailto:ibunu.nurdiyansa28@gmail.com?Subject=Mau%20tanya" class="btn btn-primary">Email</a>
               </div>
             </div>
           </div>
@@ -134,9 +134,7 @@
         </div>
     </div>
   
-    <script src="/Assets/js/script.js"></script>
-
-    <script src="/Assets/js/script.js"></script>
+    <script src="./Assets/js/script.js"></script>
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>AOS.init();</script>
