--- a/content/bali.html
+++ b/content/bali.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My WEB</title>
-    <link rel="shortcut icon" href="./Assets/img/Logo universitas pamulang.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../Assets/img/Logo universitas pamulang.png" type="image/x-icon">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     
@@ -16,7 +16,7 @@
 
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
-    <link rel="stylesheet" href="./Assets/CSS/style.css">
+    <link rel="stylesheet" href="../Assets/CSS/style.css">
 </head>
 <body>
   
@@ -119,7 +119,7 @@
         </div>
     </div>
   
-    <script src="./Assets/js/script.js"></script>
+    <script src="../Assets/js/script.js"></script>
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>AOS.init();</script>
